<resources>
    <string name="app_name">Movie-App</string>
    <string name="top_rated">Top Rated</string>
    <string name="poster">poster</string>
    <string name="title">Title</string>
    <string name="like">like</string>
    <string name="pg_13">6.6</string>
    <string name="_1hr_52min">1hr 52min</string>
    <string name="i">|</string>
    <string name="detailImage">detailimage</string>
    <string name="genre">Action, Documentary</string>
    <string name="date">24 Oct, 2019</string>
    <string name="lorem_ipsum_sjbcdjbfd_fdhfu_dfdu_fhudfbudsbfu_wbfuwgfuwfuwbuf_wufuw">lorem ipsum sjbcdjbfd fdhfu dfdu fhudfbudsbfu wbfuwgfuwfuwbuf wufuw</string>
    <string name="favImage">favImage</string>
    <string name="favourites_list_is_empty">Favourites List is Empty</string>
    <string name="refresh">Refresh</string>
</resources>
