<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tool="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="movie"
            type="com.example.movie_app.model.Movie" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        tools:context=".ui.MovieDetailsFragment">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/detailImage"
            android:src="@{movie.thumbnail}"
            tools:src="@drawable/poster"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginTop"
            android:paddingTop="4dp"
            style="@style/TextColor"
            android:text="@{movie.title}"
            android:textStyle="bold"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/like"
            android:paddingTop="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="@dimen/marginTop"
            android:contentDescription="@string/like"
            android:tint="@color/colorAccent"
            android:scaleType="centerCrop"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/love" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/vote_average"
                android:textSize="18sp"
                android:paddingTop="8dp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{Double.toString(movie.voteAverage)}"
                style="@style/secondTextColor"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/i"
                style="@style/secondTextColor"
                android:layout_weight="1" />

        </LinearLayout>

<!--        <TextView-->
<!--            android:id="@+id/genre"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            style="@style/secondTextColor"-->
<!--            android:paddingTop="8dp"-->
<!--            android:textSize="18sp"-->
<!--            android:textStyle="bold"-->
<!--            android:text="@{movie.genre.toString()}" />-->

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            style="@style/secondTextColor"
            android:paddingTop="8dp"
            android:textSize="18sp"
            android:text="@{movie.releaseDate}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextColor"
            android:id="@+id/movie_details"
            android:layout_marginStart="@dimen/marginTop"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:paddingEnd="8dp"
            android:lineSpacingExtra="4dp"
            tools:text="@string/lorem_ipsum_sjbcdjbfd_fdhfu_dfdu_fhudfbudsbfu_wbfuwgfuwfuwbuf_wufuw"
            android:text="@{movie.overview}" />
    </LinearLayout>
</layout>
